--- a/bootloader/Makefile
+++ b/bootloader/Makefile
@@ -1,8 +1,8 @@
 THIS_DIR := $(shell dirname $(realpath $(firstword $(MAKEFILE_LIST))))
 THIS_BUILD_DIR := $(patsubst $(ROOT_DIR)/%,$(BUILD_DIR)/%,$(THIS_DIR))
 
-LOCAL_CFLAGS := -ffreestanding
-LOCAL_LDFLAGS := -nostdlib -no-pie -static -lgcc -static-libgcc
+LOCAL_CFLAGS := -ffreestanding -fno-builtin
+LOCAL_LDFLAGS := -nostdlib
 
 STAGE1_SOURCE_FILE := $(THIS_DIR)/stage1.asm
 STAGE1_BINARY_FILE := $(patsubst $(ROOT_DIR)/%.asm,$(BUILD_DIR)/%.bin,$(STAGE1_SOURCE_FILE))
@@ -26,15 +26,14 @@ $(STAGE2_BINARY_FILE): $(STAGE2_OUTPUT_FILE) FORCE
 	$(OBJCOPY) -O binary $< $@
 
 $(STAGE2_OUTPUT_FILE): $(STAGE2_OBJECT_FILES) FORCE
-	$(TARGET_CC) $(TARGET_CFLAGS) $(LOCAL_LDFLAGS) -o $@ $(STAGE2_OBJECT_FILES)
+	$(TARGET_LD_32BIT) $(TARGET_LDFLAGS) $(LOCAL_LDFLAGS) -T stage2.ld -o $@ $(STAGE2_OBJECT_FILES) -lstdc32
 
 $(BUILD_DIR)/%.asm.o: $(ROOT_DIR)/%.asm FORCE
 	mkdir -p $(@D)
-	$(NASM) -f elf -o $@ $<
+	$(NASM) -f elf32 -o $@ $<
 
 $(BUILD_DIR)/%.c.o: $(ROOT_DIR)/%.c FORCE
-	echo ============= $(THIS_BUILD_DIR)
 	mkdir -p $(@D)
-	$(TARGET_CC) $(TARGET_CFLAGS) $(LOCAL_CFLAGS) -c -o $@ $<
+	$(TARGET_CC_32BIT) $(TARGET_CFLAGS) $(LOCAL_CFLAGS) -c -o $@ $<
 
 FORCE: ;
