Use dependency files instead of explicit FORCE target

--- a/bootloader/Makefile
+++ b/bootloader/Makefile
@@ -10,30 +10,32 @@ STAGE1_BINARY_FILE := $(patsubst $(ROOT_DIR)/%.asm,$(BUILD_DIR)/%.bin,$(STAGE1_S
 STAGE2_SOURCE_FILES := $(shell find "$(THIS_DIR)/stage2" -type f -name *.asm)
 STAGE2_SOURCE_FILES += $(shell find "$(THIS_DIR)/stage2" -type f -name *.c)
 STAGE2_OBJECT_FILES := $(patsubst $(ROOT_DIR)/%,$(BUILD_DIR)/%.o,$(STAGE2_SOURCE_FILES))
+STAGE2_DEPEND_FILES := $(patsubst $(ROOT_DIR)/%,$(BUILD_DIR)/%.d,$(STAGE2_SOURCE_FILES))
 STAGE2_OUTPUT_FILE  := $(THIS_BUILD_DIR)/stage2.elf
 STAGE2_BINARY_FILE  := $(THIS_BUILD_DIR)/stage2.bin
 
-all: $(STAGE1_BINARY_FILE) $(STAGE2_BINARY_FILE) FORCE
+
+-include $(STAGE2_DEPEND_FILES)
+
+all: $(STAGE1_BINARY_FILE) $(STAGE2_BINARY_FILE)
 	dd if=/dev/zero of=$(THIS_BUILD_DIR)/bootloader.bin bs=512 count=64 $(SILENT)
 	dd if=$(STAGE1_BINARY_FILE) of=$(THIS_BUILD_DIR)/bootloader.bin bs=512 seek=0 conv=notrunc $(SILENT)
 	dd if=$(STAGE2_BINARY_FILE) of=$(THIS_BUILD_DIR)/bootloader.bin bs=512 seek=1 conv=notrunc $(SILENT)
 
-$(STAGE1_BINARY_FILE): $(STAGE1_SOURCE_FILE) FORCE
+$(STAGE1_BINARY_FILE): $(STAGE1_SOURCE_FILE)
 	mkdir -p $(@D)
 	nasm -f bin -o $@ $<
 
-$(STAGE2_BINARY_FILE): $(STAGE2_OUTPUT_FILE) FORCE
+$(STAGE2_BINARY_FILE): $(STAGE2_OUTPUT_FILE)
 	$(OBJCOPY) -O binary $< $@
 
-$(STAGE2_OUTPUT_FILE): $(STAGE2_OBJECT_FILES) FORCE
+$(STAGE2_OUTPUT_FILE): $(STAGE2_OBJECT_FILES)
 	$(TARGET_LD_32BIT) $(TARGET_LDFLAGS) $(LOCAL_LDFLAGS) -T stage2.ld -o $@ $(STAGE2_OBJECT_FILES) -lstdc32
 
-$(BUILD_DIR)/%.asm.o: $(ROOT_DIR)/%.asm FORCE
+$(BUILD_DIR)/%.asm.o: $(ROOT_DIR)/%.asm
 	mkdir -p $(@D)
 	$(NASM) -f elf32 -o $@ $<
 
-$(BUILD_DIR)/%.c.o: $(ROOT_DIR)/%.c FORCE
+$(BUILD_DIR)/%.c.o: $(ROOT_DIR)/%.c
 	mkdir -p $(@D)
-	$(TARGET_CC_32BIT) $(TARGET_CFLAGS) $(LOCAL_CFLAGS) -c -o $@ $<
-
-FORCE: ;
+	$(TARGET_CC_32BIT) $(TARGET_CFLAGS) $(LOCAL_CFLAGS) -MMD -c -o $@ $<
